Add a simple test for AcceptKeyNavOnMouseDown.
(bzr r529.3.2)

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -9,7 +9,8 @@ check_PROGRAMS = \
   mouse-buttons-test \
   hgrid-key-navigation-test \
   hlayout-key-navigation-test \
-  vlayout-key-navigation-test
+  vlayout-key-navigation-test \
+  focus-on-mouse-down-test
 
 # Please keep alphabetical
 test_nux_SOURCES = \
@@ -177,6 +178,17 @@ vlayout_key_navigation_test_CPPFLAGS = $(TestFlags)
 vlayout_key_navigation_test_LDADD = $(TestLibs)
 vlayout_key_navigation_test_LDFLAGS = -lpthread -lXtst
 
+focus_on_mouse_down_test_SOURCES = focus-on-mouse-down-test.cpp \
+  nux_test_framework.cpp \
+  nux_test_framework.h \
+  nux_automated_test_framework.cpp \
+  nux_automated_test_framework.h \
+  test-view.cpp \
+  test-view.h
+
+focus_on_mouse_down_test_CPPFLAGS = $(TestFlags)
+focus_on_mouse_down_test_LDADD = $(TestLibs)
+focus_on_mouse_down_test_LDFLAGS = -lpthread -lXtst
 
 #run make test as part of make check
 check-local: test gtest test-apps
@@ -187,7 +199,7 @@ test:
 gtest: gtest-nux-core
 	./gtest-nux-core
 
-test-apps: test-graphics-display test-empty-window button-xtest mouse-events-test mouse-buttons-test hgrid-key-navigation-test hlayout-key-navigation-test vlayout-key-navigation-test
+test-apps: test-graphics-display test-empty-window button-xtest mouse-events-test mouse-buttons-test hgrid-key-navigation-test hlayout-key-navigation-test  vlayout-key-navigation-test focus-on-mouse-down-test
 	./test-graphics-display
 	./test-empty-window
 	./button-xtest
@@ -196,6 +208,7 @@ test-apps: test-graphics-display test-empty-window button-xtest mouse-events-tes
 	./hgrid-key-navigation-test
 	./hlayout-key-navigation-test
 	./vlayout-key-navigation-test
+	./focus-on-mouse-down-test
 
 check-report:
 	@gtester -k -o=test-nux-results.xml -k ./test-nux \
