* Added coverflow example.
(bzr r555.2.16)

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -83,5 +83,6 @@ dist_uitextures_DATA = \
   UITextures/VectorYLabel.tga \
   UITextures/VectorZLabel.tga \
   UITextures/VScrollBar.tga \
-  UITextures/WindowSizeGrip.tga
+  UITextures/WindowSizeGrip.tga \
+  UITextures/nux.png
   
