--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -84,5 +84,6 @@ dist_uitextures_DATA = \
   UITextures/VectorZLabel.tga \
   UITextures/VScrollBar.tga \
   UITextures/WindowSizeGrip.tga \
-  UITextures/nux.png
+  UITextures/nux.png \
+  UITextures/coverflow.oval-shadow.png
   
