Added new TextEntryIM and reverted TextEntry back to its orignal form
(bzr r544.9.11)

--- a/Nux/Makefile.am
+++ b/Nux/Makefile.am
@@ -91,6 +91,7 @@ source_cpp = \
   $(srcdir)/SystemThread.cpp \
   $(srcdir)/TabView.cpp \
   $(srcdir)/TextEntry.cpp \
+  $(srcdir)/TextEntryIM.cpp \
   $(srcdir)/TextureArea.cpp \
   $(srcdir)/Timeline.cpp \
   $(srcdir)/TimelineEasings.cpp \
@@ -172,6 +173,7 @@ source_h = \
   $(srcdir)/SystemThread.h \
   $(srcdir)/TabView.h \
   $(srcdir)/TextEntry.h \
+  $(srcdir)/TextEntryIM.h \
   $(srcdir)/TextureArea.h \
   $(srcdir)/Timeline.h \
   $(srcdir)/TimelineEasings.h \
