Implement some texture blending shaders
(bzr r571.3.2)

--- a/NuxGraphics/Makefile.am
+++ b/NuxGraphics/Makefile.am
@@ -139,6 +139,7 @@ source_cpp = \
   $(srcdir)/RenderingPipe.cpp \
   $(srcdir)/RenderingPipeAsm.cpp \
   $(srcdir)/RenderingPipeGLSL.cpp \
+  $(srcdir)/RenderingPipeTextureBlend.cpp \
   $(srcdir)/GLRenderingAPI.cpp \
   $(srcdir)/RunTimeStats.cpp \
   $(srcdir)/XInputWindow.cpp
