--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -1,8 +1,7 @@
 if BUILD_TESTS
 check_PROGRAMS = \
-  test-nux \
   gtest-nux \
-  gtest-nux-core \
+  gtest-nuxcore \
   test-graphics-display \
   test-empty-window \
   xtest-button \
@@ -17,10 +16,10 @@ check_PROGRAMS = \
   xtest-keynav-directions
 
 # Please keep alphabetical
-test_nux_SOURCES = \
-  test-canvas.cpp \
-  test-nux.cpp \
-  test-system.cpp
+# test_nux_SOURCES = \
+# test-canvas.cpp \
+# test-nux.cpp \
+# test-system.cpp
 
 test_nux_CPPFLAGS = \
   -I$(srcdir) \
@@ -43,19 +42,18 @@ test_nux_LDADD = \
   $(top_builddir)/Nux/libnux-@NUX_API_VERSION@.la \
   $(NUX_LIBS)
 
-gtest_nux_core_SOURCES = \
+gtest_nuxcore_SOURCES = \
   Helpers.h \
   Helpers.cpp \
+  gtest-nuxcore-async-file-writer.cpp \
   gtest-nuxcore-color.cpp \
-  test_object.cpp \
-  test_main.cpp \
-  test_async_file_writer.cpp \
-  test_logger.cpp \
-  test_cairo_wrapper.cpp \
-  test_properties.cpp \
-  test_rolling_file_appender.cpp
+  gtest-nuxcore-logger.cpp \
+  gtest-nuxcore-main.cpp \
+  gtest-nuxcore-object.cpp \
+  gtest-nuxcore-properties.cpp \
+  gtest-nuxcore-rolling-file-appender.cpp
 
-gtest_nux_core_CPPFLAGS = \
+gtest_nuxcore_CPPFLAGS = \
   -I$(srcdir) \
   -I$(top_srcdir) \
   -DPREFIX=\""$(prefix)"\" \
@@ -69,23 +67,24 @@ gtest_nux_core_CPPFLAGS = \
   $(NUX_CFLAGS) \
   $(MAINTAINER_CFLAGS)
 
-gtest_nux_core_LDADD = \
+gtest_nuxcore_LDADD = \
   $(top_builddir)/NuxCore/libnux-core-@NUX_API_VERSION@.la \
   $(top_builddir)/NuxImage/libnux-image-@NUX_API_VERSION@.la \
   $(top_builddir)/NuxGraphics/libnux-graphics-@NUX_API_VERSION@.la \
   $(top_builddir)/Nux/libnux-@NUX_API_VERSION@.la \
   $(NUX_LIBS)
 
-gtest_nux_core_LDFLAGS = \
+gtest_nuxcore_LDFLAGS = \
   -lpthread -lgtest -lgmock \
   -lboost_filesystem -lboost_system
 
 gtest_nux_SOURCES = \
-  test-nux-main.cpp \
-  test-nux-metrics.cpp \
-  test-nux-statictext.cpp \
+  gtest-nux-main.cpp \
+  gtest-nux-emmetrics.cpp \
+  gtest-nux-statictext.cpp \
   gtest-nux-windowcompositor.cpp \
-  test-nux-windowthread.cpp
+  gtest-nux-windowthread.cpp \
+  gtest-nux-cairo-wrapper.cpp
 
 
 gtest_nux_CPPFLAGS = \
@@ -234,12 +233,12 @@ check-local: test gtest test-apps
 test:
 	@gtester --verbose -k -o=test-nux-results.xml ./test-nux
 
-gtest: gtest-nux-core gtest-nux
-	./gtest-nux-core
+gtest: gtest-nuxcore gtest-nux
+	./gtest-nuxcore
 	./gtest-nux
 
-check-headless: gtest-nux-core
-	@gtester --verbose -k -o=test-nux-results.xml ./gtest-nux-core
+check-headless: gtest-nuxcore
+	@gtester --verbose -k -o=test-nux-results.xml ./gtest-nuxcore
 
 test-apps: test-graphics-display test-empty-window xtest-button xtest-mouse-events xtest-mouse-buttons xtest-hgrid-key-navigation xtest-hlayout-key-navigation xtest-vlayout-key-navigation xtest-scrollbar xtest-focus-on-mouse-down xtest-focus-on-mouse-enter xtest-keynav-directions
 	./test-graphics-display
