--- a/Nux/Makefile.am
+++ b/Nux/Makefile.am
@@ -72,7 +72,7 @@ source_cpp = \
   $(srcdir)/MainLoopGLib.cpp \
   $(srcdir)/MenuPage.cpp \
   $(srcdir)/MenuBar.cpp \
-  $(srcdir)/Metrics.cpp \
+  $(srcdir)/EMMetrics.cpp \
   $(srcdir)/MouseAreaCtrl.cpp \
   $(srcdir)/NumericValuator.cpp \
   $(srcdir)/Nux.cpp \
@@ -157,7 +157,7 @@ source_h = \
   $(srcdir)/LinearLayout.h \
   $(srcdir)/MenuPage.h \
   $(srcdir)/MenuBar.h \
-  $(srcdir)/Metrics.h \
+  $(srcdir)/EMMetrics.h \
   $(srcdir)/MouseAreaCtrl.h \
   $(srcdir)/NumericValuator.h \
   $(srcdir)/Nux.h \
