* Fix make check:   - Added m4 files for gtest   - Fix test Makefile so that gtest is build and added as a dependency for some of the tests.
(bzr r600.2.1)

--- a/configure.ac
+++ b/configure.ac
@@ -200,6 +200,13 @@ dnl ************************************
 dnl Enable/disable tests
 dnl ************************************
 
+CHECK_GTEST
+AS_IF([test "x$have_gtest" != xyes],
+      AC_MSG_ERROR([package 'gtest' not found]))
+
+AC_SUBST([GTEST_CPPFLAGS])
+
+
 AC_ARG_ENABLE([tests],
               [AC_HELP_STRING([--enable-tests=@<:@no/yes@:>@],
               [Enable Nux Testing @<:@default=yes@:>@])],
@@ -224,7 +231,6 @@ AS_IF([test "x$enable_tests" = "xyes"],
       ]
 )
 AM_CONDITIONAL(BUILD_TESTS, [test "x$enable_tests" = "xyes"])
-
 
 dnl ===========================================================================
 
