--- a/debian/rules
+++ b/debian/rules
@@ -10,7 +10,7 @@
 # build documentation as I didn't find a proper way to avoid make clean to not
 # remove doc/
 override_dh_auto_configure:
-	dh_auto_configure -- --enable-documentation=no --disable-tests
+	dh_auto_configure -- --enable-documentation=no
 NUX_ABIVERSION := $(shell sed -rn 's/^\#define[[:space:]]+NUX_ABIVERSION[[:space:]]+//p' Nux/ABI.h )
 
 override_dh_install:
