--- a/debian/control
+++ b/debian/control
@@ -25,6 +25,7 @@ Build-Depends: debhelper (>= 7.0.50~),
                libxinerama-dev,
                libutouch-geis-dev,
                libibus-1.0-dev,
+               libxtst-dev,
 Standards-Version: 3.9.2
 Section: libs
 Homepage: http://launchpad.net/nux
