--- a/debian/control
+++ b/debian/control
@@ -10,11 +10,13 @@ Build-Depends: debhelper (>= 7.0.50~),
                libboost1.46-dev,
                libcairo2-dev (>= 1.9.14),
                libpng12-dev (>= 1.2.44),
-               libglew1.6-dev,               
-               libglewmx1.6-dev,
+               libglew1.6-dev [!armel !armhf],
+               libglewmx1.6-dev [!armel !armhf],
                libxxf86vm-dev,
-               libgl1-mesa-dev (>= 7.9~git20100924-0ubuntu3),
-               libglu1-mesa-dev,
+               libgl1-mesa-dev (>= 7.9~git20100924-0ubuntu3) [!armel !armhf],
+               libglu1-mesa-dev [!armel !armhf],
+               libegl1-mesa-dev [armel armhf],
+               libgles2-mesa-dev [armel armhf],
                libxdamage-dev,
                libxcomposite-dev,
                libsigc++-2.0-dev,
@@ -65,11 +67,13 @@ Depends: libnux-2.0-0 (= ${binary:Version}),
          libgdk-pixbuf2.0-dev,
          libcairo2-dev (>= 1.9.14),
          libpng12-dev (>= 1.2.44),
-         libglew1.6-dev,
-         libglewmx1.6-dev,
+         libglew1.6-dev [!armel !armhf],
+         libglewmx1.6-dev [!armel !armhf],
          libboost1.46-dev,
          libxxf86vm-dev,
-         libgl1-mesa-dev,
+         libgl1-mesa-dev [!armel !armhf],
+         libegl1-mesa-dev [armel armhf],
+         libgles2-mesa-dev [armel armhf],
          libsigc++-2.0-dev,
          libpango1.0-dev,
          libpcre3-dev,
