Adds the ability to create a nux::Color using the html notation.
(bzr r615.2.1)

--- a/NuxCore/Makefile.am
+++ b/NuxCore/Makefile.am
@@ -45,6 +45,7 @@ source_cpp = \
   $(srcdir)/Character/NUni.cpp \
   $(srcdir)/Character/NUnicode.cpp \
   $(srcdir)/Color.cpp \
+  $(srcdir)/ColorPrivate.cpp \
   $(srcdir)/Colors.cpp \
   $(srcdir)/FileName.cpp \
   $(srcdir)/ThreadGNU.cpp \
