* Deprecated nux-image library. The feature by nux-image has been merged into nux-graphics. * Removed NuxImage Directory. * Tests are compiling. * Updated Nux API version to 3.0.
(bzr r615.1.3)

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,4 @@
-SUBDIRS = data NuxCore NuxImage NuxGraphics Nux examples gputests tests tools
+SUBDIRS = data NuxCore NuxGraphics Nux examples gputests tests tools
 
 CXXFLAGS += -fno-permissive
 
