* debian/control:   - build and dep on unversionned version of boost (transition to 1.49     in quantal)
(bzr r159.1.178)

--- a/debian/control
+++ b/debian/control
@@ -7,7 +7,7 @@ Build-Depends: debhelper (>= 7.0.50~),
                doxygen,
                libglib2.0-dev (>= 2.25.14),
                libgdk-pixbuf2.0-dev,
-               libboost1.46-dev,
+               libboost-dev,
                libcairo2-dev (>= 1.9.14),
                libpng12-dev (>= 1.2.44),
                libglew1.6-dev [!armel !armhf],
@@ -69,7 +69,7 @@ Depends: libnux-2.0-0 (= ${binary:Version}),
          libpng12-dev (>= 1.2.44),
          libglew1.6-dev [!armel !armhf],
          libglewmx1.6-dev [!armel !armhf],
-         libboost1.46-dev,
+         libboost-dev,
          libxxf86vm-dev,
          libgl1-mesa-dev [!armel !armhf],
          libegl1-mesa-dev [armel armhf],
