Tests for the gestures feature
(bzr r637.2.8)

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -78,6 +78,12 @@ gtest_nux_SOURCES = \
   gtest-nux-windowcompositor.cpp \
   gtest-nux-windowthread.cpp
 
+if HAVE_UTOUCH_GEIS
+gtest_nux_SOURCES += \
+	geis_mock.cpp \
+  gtest-nux-geisadapter.cpp
+endif
+
 gtest_nux_CPPFLAGS = \
   -I$(srcdir) \
   -I$(top_srcdir) \
