A very simple example on how to use gestures
(bzr r637.2.10)

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -31,6 +31,9 @@ noinst_PROGRAMS = text_entry_focus \
 #                  timeline \
 #                  tooltip
 
+if HAVE_UTOUCH_GEIS
+noinst_PROGRAMS += gestures
+endif
 
 # We only have to do this AM_ once to affect all the binaries we build from
 # this Makefile
@@ -106,6 +109,11 @@ shortcut_keys_LDADD = $(ALL_LIBS)
 
 coverflow_SOURCES = coverflow.cpp
 coverflow_LDADD = $(ALL_LIBS)
+
+if HAVE_UTOUCH_GEIS
+gestures_SOURCES = gestures.cpp
+gestures_LDADD = $(ALL_LIBS)
+endif
 
 # To distribute source add the source code here
 #sourceexampledir = "$(pkgdatadir)/examples"
