--- a/debian/control
+++ b/debian/control
@@ -10,8 +10,8 @@ Build-Depends: debhelper (>= 7.0.50~),
                libboost-dev,
                libcairo2-dev (>= 1.9.14),
                libpng12-dev (>= 1.2.44),
-               libglew1.6-dev [!armel !armhf],
-               libglewmx1.6-dev [!armel !armhf],
+               libglew-dev [!armel !armhf],
+               libglewmx-dev [!armel !armhf],
                libxxf86vm-dev,
                libgl1-mesa-dev (>= 7.9~git20100924-0ubuntu3) [!armel !armhf],
                libglu1-mesa-dev [!armel !armhf],
@@ -67,8 +67,8 @@ Depends: libnux-2.0-0 (= ${binary:Version}),
          libgdk-pixbuf2.0-dev,
          libcairo2-dev (>= 1.9.14),
          libpng12-dev (>= 1.2.44),
-         libglew1.6-dev [!armel !armhf],
-         libglewmx1.6-dev [!armel !armhf],
+         libglew-dev [!armel !armhf],
+         libglewmx-dev [!armel !armhf],
          libboost-dev,
          libxxf86vm-dev,
          libgl1-mesa-dev [!armel !armhf],
