--- a/debian/control
+++ b/debian/control
@@ -28,6 +28,8 @@ Build-Depends: debhelper (>= 7.0.50~),
                libutouch-geis-dev,
                libibus-1.0-dev,
                libxtst-dev,
+               gcc-4.6,
+               g++-4.6,
 Standards-Version: 3.9.3
 Section: libs
 Homepage: http://launchpad.net/nux
